Mon Apr 30 23:05:53 2012  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* test/ruby/test_continuation.rb (tracing_with_set_trace_func): don't
	  call Continuation from other threads. [ruby-dev:45596] [Bug #6382]

Mon Apr 30 21:09:06 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (optflags): disable unsafe optimizations.
	  [ruby-core:44679][Bug #6370]

Mon Apr 30 20:10:04 2012  Tanaka Akira  <akr@fsij.org>

	* ext/zlib/extconf.rb: detect z_crc_t type which will be defined
	  since zlib-1.2.7.

	* ext/zlib/zlib.c (rb_zlib_crc_table): use z_crc_t if available.

Mon Apr 30 09:02:15 2012  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* ext/openssl/lib/openssl/ssl.rb: add hostname to "hostname does not
	  match server cert." error. patched by Wes Morgan via Github.
	  https://github.com/ruby/ruby/pull/122

Mon Apr 30 04:43:53 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/json/yaml_events.rb: implicit styles should not
	  be changeable for JSON events.

Sun Apr 29 06:12:02 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (assoc, parser_yylex): add syntax to splat keyword hash.
	  [ruby-core:44591][Feature #6353]

	* compile.c (compile_array_): generate keyword splat insns.

	* vm.c (m_core_hash_merge_kwd): merge keyword hash into intermediate
	  hash.  leftward argument is prior currently.

Sat Apr 28 18:39:40 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h (rb_thread_t#yielding): add a field.

	* thread.c (rb_thread_schedule_limits): set th#yielding while
	  release GVL to yield CPU time.

	* thread.c (timer_thread_function): skip timer interrupt when
	  th#yielding is true.  This patch fixes r35480.

	* thread.c (rb_threadptr_execute_interrupts_common): revert
	  a patch of r35480.

	* ChangeLog: add an extended memo of r35480.
	  http://bugs.ruby-lang.org/projects/ruby-trunk/wiki/R35480_ExtendedMemo

Fri Apr 27 12:34:23 2012  NAKAMURA Usaku  <usa@ruby-lang.org>
