@@ -1,3 +1,8 @@
+Mon Apr 30 23:36:49 2012  Tanaka Akira  <akr@fsij.org>
+
+	* lib/fileutils.rb (copy_metadata): use File.lchown and File.lchmod to
+	  update meta data of symlinks.
+
 Mon Apr 30 23:05:53 2012  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>
 
 	* test/ruby/test_continuation.rb (tracing_with_set_trace_func): don't
